ihwa/softserve/softserve.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: softserve
  name: softserve
