ihwa/softserve/softserve.deployment.apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: softserve
  name: softserve
  namespace: softserve
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: softserve
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: softserve
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: softserve
        image: ghcr.io/charmbracelet/soft-serve:v0.6.2
        name: softserve
        ports:
        - containerPort: 23231
          hostPort: 23231
          name: git
        volumeMounts:
        - mountPath: /soft-serve
          name: data
      enableServiceLinks: false
      volumes:
      - hostPath:
          path: /opt/volumes/softserve
        name: data
