ihwa/softserve/softserve.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: softserve
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - softserve.ihwa.liao.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: softserve
          port: 80
